# cottage-memory

./: README.md  pyproject.toml
examples/chatbot/: chat_memory.py
src/cottage_memory/: __init__.py
src/cottage_memory/_db/db/: cottage_db.py  migrate.py  schema.sql
src/cottage_memory/_db/repositories/: chat_memory_repo.py  contextual_memory_repo.py  conversations_memory_repo.py  core_memory_repo.py
src/cottage_memory/_db/util/: db_path_config.py
src/cottage_memory/memory/: chat_memory.py  contextual_memory.py  conversations_memory.py
